--- a/index.html
+++ b/index.html
@@ -56,65 +56,65 @@
       </header>
     </div>
     <main>
-      <div class="mainbgcolor">
-        <h1 class="header">
+      <div class="main-button-space">
+        <h1 class="main-button-space__text">
           Efektowne rozwiazania <br />
           dla waszego biznesu
         </h1>
-        <button type="button" class="mainbtn" data-modal-open>
+        <button type="button" class="main-button-space__button" data-modal-open>
           Zamów usługę
         </button>
         <div class="modal is-hidden" data-modal>
           <div class="modal-win">
-            <div class="modal-context">
-              <button class="close-btn" type="button" data-modal-close>
+            <div class="modal-win__context">
+              <button class="modal-win__close-btn" type="button" data-modal-close>
                 <svg width="16" height="16">
                   <use href="./images/modal-icons.svg#icon-close1"></use>
                 </svg>
               </button>
-              <p class="modal-text">Zostaw swoje dane w formularzu poniżej</p>
-              <form class="form-space">
-                <div class="space">
-                  <svg class="form-icons" width="18" height="18" focusable="true">
-                    <use href="./images/form-icons.svg#icon-person" class="icon-color"></use>
+              <p class="modal-win__text">Zostaw swoje dane w formularzu poniżej</p>
+              <form class="form">
+                <div class="form__space">
+                  <svg class="form__icons" width="18" height="18" focusable="true">
+                    <use href="./images/form-icons.svg#icon-person" class="form__icon-size"></use>
                   </svg>
                   <label for="name">
-                    <p class="label-text">Imię</p>
+                    <p class="form__label-text">Imię</p>
                   </label>
-                  <input type="text" name="name" id="name" class="input-size" />
+                  <input type="text" name="name" id="name" class="form__input" />
                 </div>
-                <div class="space">
-                  <svg class="form-icons" width="18" height="18">
-                    <use href="./images/form-icons.svg#icon-phone"></use>
+                <div class="form__space">
+                  <svg class="form__icons" width="18" height="18">
+                    <use href="./images/form-icons.svg#icon-phone" class="form__icon-size"></use>
                   </svg>
-                  <label for="phone"> <p class="label-text">Telefon</p> </label>
+                  <label for="phone"> <p class="form__label-text">Telefon</p> </label>
                   <input
                     type="tel"
                     name="phone"
                     id="phone"
-                    class="input-size" />
+                    class="form__input" />
                 </div>
-                <div class="space">
-                  <svg class="form-icons" width="18" height="18">
-                    <use href="./images/form-icons.svg#icon-email"></use>
+                <div class="form__space">
+                  <svg class="form__icons" width="18" height="18">
+                    <use href="./images/form-icons.svg#icon-email" class="form__icon-size"></use>
                   </svg>
                   <label for="email">
-                    <p class="label-text">E-mail</p>
+                    <p class="form__label-text">E-mail</p>
                   </label>
                   <input
                     type="email"
                     name="email"
                     id="email"
-                    class="input-size" />
+                    class="form__input" />
                 </div>
                 <label>
-                  <p class="label-text">Komentarz</p>
+                  <p class="form__label-text">Komentarz</p>
                   <textarea
-                    class="comment-space"
+                    class="form_textarea"
                     placeholder="Wprowadź tekst"></textarea>
                 </label>
-                <div class="checkbox-item">
-                    <input type="checkbox" id="checkbox" class="custom-checkbox">
+                <div class="form__checkbox">
+                    <input type="checkbox" id="checkbox" class="form__checkbox-custom">
                     <label for="checkbox" class="label-size">
                     <svg class="checkbox-icon" width="16" height="15">
                       <use href="./images/form-icons.svg#icon-checkgood"></use>
