--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
                 </label>
                 <div class="form__checkbox">
                     <input type="checkbox" id="checkbox" class="form__checkbox-custom">
-                    <label for="checkbox" class="label-size">
-                    <svg class="checkbox-icon" width="16" height="15">
+                    <label for="checkbox" class="form__checkbox__label">
+                    <svg class="form__checkbox-icon" width="16" height="15">
                       <use href="./images/form-icons.svg#icon-checkgood"></use>
                     </svg>
                     </label>
-                  <p class="checkbox-text">
+                  <p class="form__checkbox-text">
                     Oświadczam iż akceptuję <a href="#">Regulamin</a> i
                     <a href="#"> Politykę Prywatności.</a>
                   </p>
@@ -131,18 +131,18 @@
           </div>
         </div>
       </div>
-      <div class="body-style">
-        <div class="upper-body section">
+      <div class="wrapper">
+        <div class="upper-main section">
           <section>
-            <ul class="about container">
+            <ul class="upper-main__about container">
               <li>
-                <svg class="lorem-bg">
+                <svg class="upper-main__lorem-img">
                   <use
                     href="./images/icons.svg#icon-antenna-1"
                     widht="70"
                     height="70"></use>
                 </svg>
-                <h4 class="text-title">Lorem ipsum</h4>
+                <h4 class="upper-main__title">Lorem ipsum</h4>
                 <p class="text">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
                   vel arcu sem. Sed non sodales dui. Interdum et malesuada
@@ -150,82 +150,81 @@
               </li>
 
               <li>
-                <svg class="lorem-bg">
+                <svg class="upper-main__lorem-img">
                   <use
                     href="./images/icons.svg#icon-clock-1"
                     widht="70"
                     height="70"></use>
                 </svg>
-                <h4 class="text-title">Lorem ipsum</h4>
-                <p class="text">
+                <h4 class="upper-main__title">Lorem ipsum</h4>
+                <p class="upper-main__text">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
                   vel arcu sem. Sed non sodales dui. Interdum et malesuada
                 </p>
               </li>
               <li>
-                <svg class="lorem-bg">
+                <svg class="upper-main__lorem-img">
                   <use
                     href="./images/icons.svg#icon-diagram-1"
                     widht="70"
                     height="70"></use>
                 </svg>
-                <h4 class="text-title">Lorem ipsum</h4>
-                <p class="text">
+                <h4 class="upper-main__title">Lorem ipsum</h4>
+                <p class="upper-main__text">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
                   vel arcu sem. Sed non sodales dui. Interdum et malesuada
                 </p>
               </li>
 
               <li>
-                <svg class="lorem-bg">
+                <svg class="upper-main__lorem-img">
                   <use
                     href="./images/icons.svg#icon-astronaut-1"
                     widht="70"
                     height="70"></use>
                 </svg>
-                <h4 class="text-title">Lorem ipsum</h4>
-                <p class="text">
+                <h4 class="upper-main__title">Lorem ipsum</h4>
+                <p class="upper-main__text">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
                   vel arcu sem. Sed non sodales dui. Interdum et malesuada
                 </p>
               </li>
             </ul>
           </section>
-          <section class="img-bg">
-            <h2 class="head-text">Czym się zajmujemy</h2>
-            <div class="images">
-              <div class="img-label">
+          <section class="main-middle">
+            <h2 class="main-middle__head-text">Czym się zajmujemy</h2>
+            <div class="main-middle__images">
+              <div class="main-middle__label">
                 <img
                   src="images/work1.jpg"
                   alt="Kodowanie"
                   width="370"
                   height="294" />
-                <p class="label">Aplikacje Komputerowe</p>
+                <p class="main-middle__label-text">Aplikacje Komputerowe</p>
               </div>
-              <div class="img-label">
+              <div class="main-middle__label">
                 <img
                   src="images/work2.jpg"
                   alt="Debugowanie aplikacji"
                   width="370"
                   height="294" />
-                <p class="label">Aplikacje Mobilne</p>
+                <p class="main-middle__label-text">Aplikacje Mobilne</p>
               </div>
-              <div class="img-label">
+              <div class="main-middle__label">
                 <img
                   src="images/work3.jpg"
                   alt="Projektowanie stylów"
                   width="370"
                   height="294" />
-                <p class="label">Rozwiązania Graficzne</p>
+                <p class="main-middle__label-text">Rozwiązania Graficzne</p>
               </div>
             </div>
           </section>
         </div>
-
-        <div class="mid-body section">
-          <p class="head-text">Nasz zespół</p>
-          <div class="workers container">
-            <figure class="team-card">
+        <div class="main section">
+          <p class="main__head-text">Nasz zespół</p>
+          <div class="main__workers container">
+            <figure class="main__team-card">
               <img
                 src="images/person1.jpg"
                 alt="Product Desinger"
@@ -233,12 +232,12 @@
                 height="260" />
 
               <figcaption>
-                <p class="pic-people">John Doe</p>
-                <p class="ppl-jobs">Product Desinger</p>
-                <ul class="footer-bg__icons">
+                <p class="main__names">John Doe</p>
+                <p class="main__jobs">Product Desinger</p>
+                <ul class="main__icons">
                   <li>
                     <a>
-                      <svg class="social-media">
+                      <svg class="main__social-media">
                         <use
                           href="./images/icons.svg#icon-instagram-2"
                           width="20"
@@ -248,7 +247,7 @@
                   </li>
                   <li>
                     <a>
-                      <svg class="social-media">
+                      <svg class="main__social-media">
                         <use
                           href="./images/icons.svg#icon-twitter-1"
                           width="20"
@@ -258,7 +257,7 @@
                   </li>
                   <li>
                     <a>
-                      <svg class="social-media">
+                      <svg class="main__social-media">
                         <use
                           href="./images/icons.svg#icon-facebook-1"
                           width="20"
@@ -268,7 +267,7 @@
                   </li>
                   <li>
                     <a>
-                      <svg class="social-media">
+                      <svg class="main__social-media">
                         <use
                           href="./images/icons.svg#icon-linkedin-1"
                           width="20"
@@ -279,7 +278,7 @@
                 </ul>
               </figcaption>
             </figure>
-            <figure class="team-card">
+            <figure class="main__team-card">
               <img
                 src="images/person2.jpg"
                 alt="Frontend Developer"
@@ -287,12 +286,12 @@
                 height="260" />
 
               <figcaption>
-                <p class="pic-people">John Doe</p>
-                <p class="ppl-jobs">Frontend Developer</p>
-                <ul class="footer-bg__icons">
+                <p class="main__names">John Doe</p>
+                <p class="main__jobs">Frontend Developer</p>
+                <ul class="main__icons">
                   <li>
                     <a>
-                      <svg class="social-media">
+                      <svg class="main__social-media">
                         <use
                           href="./images/icons.svg#icon-instagram-2"
                           width="20"
@@ -302,7 +301,7 @@
                   </li>
                   <li>
                     <a>
-                      <svg class="social-media">
+                      <svg class="main__social-media">
                         <use
                           href="./images/icons.svg#icon-twitter-1"
                           width="20"
@@ -312,7 +311,7 @@
                   </li>
                   <li>
                     <a>
-                      <svg class="social-media">
+                      <svg class="main__social-media">
                         <use
                           href="./images/icons.svg#icon-facebook-1"
                           width="20"
@@ -322,7 +321,7 @@
                   </li>
                   <li>
                     <a>
-                      <svg class="social-media">
+                      <svg class="main__social-media">
                         <use
                           href="./images/icons.svg#icon-linkedin-1"
                           width="20"
@@ -333,7 +332,7 @@
                 </ul>
               </figcaption>
             </figure>
-            <figure class="team-card">
+            <figure class="main__team-card">
               <img
                 src="images/person3.jpg"
                 alt="Marketing"
@@ -341,12 +340,12 @@
                 height="260" />
 
               <figcaption>
-                <p class="pic-people">John Doe</p>
-                <p class="ppl-jobs">Marketing</p>
-                <ul class="footer-bg__icons">
+                <p class="main__names">John Doe</p>
+                <p class="main__jobs">Marketing</p>
+                <ul class="main__icons">
                   <li>
                     <a>
-                      <svg class="social-media">
+                      <svg class="main__social-media">
                         <use
                           href="./images/icons.svg#icon-instagram-2"
                           width="20"
@@ -356,7 +355,7 @@
                   </li>
                   <li>
                     <a>
-                      <svg class="social-media">
+                      <svg class="main__social-media">
                         <use
                           href="./images/icons.svg#icon-twitter-1"
                           width="20"
@@ -366,7 +365,7 @@
                   </li>
                   <li>
                     <a>
-                      <svg class="social-media">
+                      <svg class="main__social-media">
                         <use
                           href="./images/icons.svg#icon-facebook-1"
                           width="20"
@@ -376,7 +375,7 @@
                   </li>
                   <li>
                     <a>
-                      <svg class="social-media">
+                      <svg class="main__social-media">
                         <use
                           href="./images/icons.svg#icon-linkedin-1"
                           width="20"
@@ -387,19 +386,19 @@
                 </ul>
               </figcaption>
             </figure>
-            <figure class="team-card">
+            <figure class="main__team-card">
               <img
                 src="images/person4.jpg"
                 alt="UI Desinger"
                 width="270"
                 height="260" />
               <figcaption>
-                <p class="pic-people">John Doe</p>
-                <p class="ppl-jobs">UI Desinger</p>
-                <ul class="footer-bg__icons">
+                <p class="main__names">John Doe</p>
+                <p class="main__jobs">UI Desinger</p>
+                <ul class="main__icons">
                   <li>
                     <a>
-                      <svg class="social-media">
+                      <svg class="main__social-media">
                         <use
                           href="./images/icons.svg#icon-instagram-2"
                           width="20"
@@ -409,7 +408,7 @@
                   </li>
                   <li>
                     <a>
-                      <svg class="social-media">
+                      <svg class="main__social-media">
                         <use
                           href="./images/icons.svg#icon-twitter-1"
                           width="20"
@@ -419,7 +418,7 @@
                   </li>
                   <li>
                     <a>
-                      <svg class="social-media">
+                      <svg class="main__social-media">
                         <use
                           href="./images/icons.svg#icon-facebook-1"
                           width="20"
@@ -429,7 +428,7 @@
                   </li>
                   <li>
                     <a>
-                      <svg class="social-media">
+                      <svg class="main__social-media">
                         <use
                           href="./images/icons.svg#icon-linkedin-1"
                           width="20"
@@ -442,35 +441,35 @@
             </figure>
           </div>
         </div>
-        <div class="lower-body section">
-          <p class="head-text">Nasi klienci</p>
-          <ul class="lower-icons">
-            <li class="box-icons">
+        <div class="lower-main section">
+          <p class="lower-main__head-text">Nasi klienci</p>
+          <ul class="lower-main__box">
+            <li class="lower-main__icons">
               <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-Logo1"></use>
               </svg>
             </li>
-            <li class="box-icons">
+            <li class="lower-main__icons">
               <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-Logo2"></use>
               </svg>
             </li>
-            <li class="box-icons">
+            <li class="lower-main__icons">
               <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-Logo3"></use>
               </svg>
             </li>
-            <li class="box-icons">
+            <li class="lower-main__icons">
               <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-Logo4"></use>
               </svg>
             </li>
-            <li class="box-icons">
+            <li class="lower-main__icons">
               <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-Logo5"></use>
               </svg>
             </li>
-            <li class="box-icons">
+            <li class="lower-main__icons">
               <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-Logo6"></use>
               </svg>
