--- a/portfolio.html
+++ b/portfolio.html
@@ -54,31 +54,31 @@
         </header>
       </div>
     </div>
-    <main class="main-content-color">
+    <main class="portfolio-main">
       <div class="section">
-        <ul class="pagenav">
+        <ul class="portfolio-main__nav">
           <li>
-            <button type="button" class="navbutton">Wszystkie</button>
+            <button type="button" class="portfolio-main__button">Wszystkie</button>
           </li>
           <li>
-            <button type="button" class="navbutton">Strony</button>
+            <button type="button" class="portfolio-main__button">Strony</button>
           </li>
           <li>
-            <button type="button" class="navbutton">Aplikacje</button>
+            <button type="button" class="portfolio-main__button">Aplikacje</button>
           </li>
           <li>
-            <button type="button" class="navbutton">Dizajn</button>
+            <button type="button" class="portfolio-main__button">Dizajn</button>
           </li>
           <li>
-            <button type="button" class="navbutton">Markieting</button>
+            <button type="button" class="portfolio-main__button">Markieting</button>
           </li>
         </ul>
-        <div class="pic-box container">
-          <figure class="pictures" type="button">
-            <div class="pic-show">
+        <div class="portfolio-main__boxes container">
+          <figure class="portfolio-main__pictures" type="button">
+            <div class="portfolio-main__pictures--show">
               <img src="./images/book.jpg" width="370" height="294" />
 
-              <div class="pic-overlay">
+              <div class="portfolio-main__pictures--overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -87,15 +87,15 @@
                 </p>
               </div>
             </div>
-            <figcaption class="pic-text">
-              <p class="pic-title">Magazyn Limited Edition</p>
+            <figcaption class="portfolio-main__pictures__text">
+              <p class="portfolio-main__pictures__title">Magazyn Limited Edition</p>
               <p>Dizajn</p>
             </figcaption>
           </figure>
-          <figure class="pictures" type="button">
-            <div class="pic-show">
+          <figure class="portfolio-main__pictures" type="button">
+            <div class="portfolio-main__pictures--show">
               <img src="./images/boxes.jpg" width="370" height="294" />
-              <div class="pic-overlay">
+              <div class="portfolio-main__pictures--overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -104,15 +104,15 @@
                 </p>
               </div>
             </div>
-            <figcaption class="pic-text">
-              <p class="pic-title">Project Boxes</p>
+            <figcaption class="portfolio-main__pictures__text">
+              <p class="portfolio-main__pictures__title">Project Boxes</p>
               <p>Aplikacja</p>
             </figcaption>
           </figure>
-          <figure class="pictures" type="button">
-            <div class="pic-show">
+          <figure class="portfolio-main__pictures" type="button">
+            <div class="portfolio-main__pictures--show">
               <img src="./images/food.jpg" width="370" height="294" />
-              <div class="pic-overlay">
+              <div class="portfolio-main__pictures--overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -121,15 +121,15 @@
                 </p>
               </div>
             </div>
-            <figcaption class="pic-text">
-              <p class="pic-title">Restauracja Seafood</p>
+            <figcaption class="portfolio-main__pictures__text">
+              <p class="portfolio-main__pictures__title">Restauracja Seafood</p>
               <p>Aplikacja</p>
             </figcaption>
           </figure>
-          <figure class="pictures" type="button">
-            <div class="pic-show">
+          <figure class="portfolio-main__pictures" type="button">
+            <div class="portfolio-main__pictures--show">
               <img src="./images/hdphones.jpg" width="370" height="294" />
-              <div class="pic-overlay">
+              <div class="portfolio-main__pictures--overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -138,15 +138,15 @@
                 </p>
               </div>
             </div>
-            <figcaption class="pic-text">
-              <p class="pic-title">Project Prime</p>
+            <figcaption class="portfolio-main__pictures__text">
+              <p class="portfolio-main__pictures__title">Project Prime</p>
               <p>Marketing</p>
             </figcaption>
           </figure>
-          <figure class="pictures" type="button">
-            <div class="pic-show">
+          <figure class="portfolio-main__pictures" type="button">
+            <div class="portfolio-main__pictures--show">
               <img src="./images/pc.jpg" width="370" height="294" />
-              <div class="pic-overlay">
+              <div class="portfolio-main__pictures--overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -155,15 +155,15 @@
                 </p>
               </div>
             </div>
-            <figcaption class="pic-text">
-              <p class="pic-title">Inspiration has no Borders</p>
+            <figcaption class="portfolio-main__pictures__text">
+              <p class="portfolio-main__pictures__title">Inspiration has no Borders</p>
               <p>Strona Internetowa</p>
             </figcaption>
           </figure>
-          <figure class="pictures" type="button">
-            <div class="pic-show">
+          <figure class="portfolio-main__pictures" type="button">
+            <div class="portfolio-main__pictures--show">
               <img src="./images/proj-name.jpg" width="370" height="294" />
-              <div class="pic-overlay">
+              <div class="portfolio-main__pictures--overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -172,15 +172,15 @@
                 </p>
               </div>
             </div>
-            <figcaption class="pic-text">
-              <p class="pic-title">Projeck LAB</p>
+            <figcaption class="portfolio-main__pictures__text">
+              <p class="portfolio-main__pictures__title">Projeck LAB</p>
               <p>Marketing</p>
             </figcaption>
           </figure>
-          <figure class="pictures" type="button">
-            <div class="pic-show">
+          <figure class="portfolio-main__pictures" type="button">
+            <div class="portfolio-main__pictures--show">
               <img src="./images/sport.jpg" width="370" height="294" />
-              <div class="pic-overlay">
+              <div class="portfolio-main__pictures--overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -189,15 +189,15 @@
                 </p>
               </div>
             </div>
-            <figcaption class="pic-text">
-              <p class="pic-title">Grafika new Orlean vs Golden Star</p>
+            <figcaption class="portfolio-main__pictures__text">
+              <p class="portfolio-main__pictures__title">Grafika new Orlean vs Golden Star</p>
               <p>Dizajn</p>
             </figcaption>
           </figure>
-          <figure class="pictures" type="button">
-            <div class="pic-show">
+          <figure class="portfolio-main__pictures" type="button">
+            <div class="portfolio-main__pictures--show">
               <img src="./images/techpic.jpg" width="370" height="294" />
-              <div class="pic-overlay">
+              <div class="portfolio-main__pictures--overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -206,15 +206,15 @@
                 </p>
               </div>
             </div>
-            <figcaption class="pic-text">
-              <p class="pic-title">Technocrack</p>
+            <figcaption class="portfolio-main__pictures__text">
+              <p class="portfolio-main__pictures__title">Technocrack</p>
               <p>Strona Internetowa</p>
             </figcaption>
           </figure>
-          <figure class="pictures" type="button">
-            <div class="pic-show">
+          <figure class="portfolio-main__pictures" type="button">
+            <div class="portfolio-main__pictures--show">
               <img src="./images/writting.jpg" width="370" height="294" />
-              <div class="pic-overlay">
+              <div class="portfolio-main__pictures--overlay">
                 <p>
                   Technocrack jest popularną platformą wykorzystywaną do
                   rozpowszechniania koronawirusa. Firmy wykorzystują tę
@@ -223,8 +223,8 @@
                 </p>
               </div>
             </div>
-            <figcaption class="pic-text">
-              <p class="pic-title">Growing Business</p>
+            <figcaption class="portfolio-main__pictures__text">
+              <p class="portfolio-main__pictures__title">Growing Business</p>
               <p>Aplikacja</p>
             </figcaption>
           </figure>
